# Agentic-AI-Pipeline

./: .coveragerc  .dockerignore  .editorconfig  .env.development  .env.example.local  .env.production  .env.social_media.example  .env.test  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  .shellcheckrc  .tool-versions  CITATION.cff  Caddyfile  DEPLOYMENTS_README.md  Dockerfile  Jenkinsfile  Justfile  Makefile  OBSERVABILITY_IMPLEMENTATION.md  Procfile  README.md  SOCIAL_MEDIA_README.md  TRACING.md  _headers  compose.override.yaml  compose.yaml  demo_observability.py  index.html  mypy.ini  poetry.toml  pyproject.toml  renovate.json  requirements.txt  serve-wiki.sh  test_eval_system.py  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  eval.yml  monorepo-ci.yml  release.yml  security-audit.yml  (+1 more)
Agentic-Coding-Pipeline/: Jenkinsfile  README.md  pipeline.py  run.py  services.py
Agentic-RAG-Pipeline/: .env.example  .gitignore  Jenkinsfile  README.md  app.py  requirements.txt  run.sh  services.py  windows-run.bat
ansible/: ansible.cfg  run_docker.sh  run_systemd.sh  verify.sh
clients/python/: pyproject.toml
clients/python/agentic_ai_client/: __init__.py  __main__.py  client.py
deploy/: agentic-ai.service  nginx.conf
docs/: ADVANCED_DEPLOYMENTS.md  DEPLOYMENT_QUICKSTART.md  SOCIAL_MEDIA_AUTOMATION.md
evals/: __init__.py  runner.py  scorer.py
examples/: social_media_example.py
k8s/: deployment.yaml  ingress.yaml  service.yaml
mcp/: README.md  __init__.py  schemas.py  server.py
observability/: docker-compose.jaeger.yaml  otel-collector.yaml
schemas/: dossier.schema.json  email.schema.json
scripts/: blue_green_deploy.sh  bootstrap.sh  canary_deploy.sh  compose_down.sh  compose_up.sh  curl_smoke.sh  deploy_k8s.sh  deployment_monitor.sh  dev.sh  ecs_blue_green_deploy.sh  export_openapi.py  format_all.sh  gen_client.sh  health.sh  ingest_seed.sh  install_ts_client.sh  openapi_ts.sh  rollback.sh  run_api.sh  run_docker.sh  smoke.sh  teardown_k8s.sh  ts_smoke.sh
tests/: conftest.py  test_evals.py  test_mcp_server.py  test_memory_layer.py  test_replay.py  test_tools_ops.py  test_tracing_basic.py
web/: app.js  index.html  social_media.html  styles.css
(+168 files in other folders)
