[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentic-multistage-bot"
version = "0.3.0"
description = "Full-fledged multi-stage agentic chatbot with 7-layer architecture (experience, discovery, composition, reasoning & planning, tools, memory & feedback, infrastructure)."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "agentic_ai", from = "src" }, { include = "mcp" }]
keywords = ["agents", "langgraph", "langchain", "fastapi", "rag", "chromadb", "sqlite", "sse", "tool-chaining"]

# Console entry points
[tool.poetry.scripts]
agentic-ai = "agentic_ai.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Web API
fastapi = ">=0.112.0"
uvicorn = {version = ">=0.30.0", extras=["standard"]}
sse-starlette = ">=2.1.0"
pydantic = ">=2.8.0"
pydantic-settings = ">=2.3.4"
python-dotenv = ">=1.0.1"
orjson = ">=3.10.6"

# Agentic stack
langchain = ">=0.2.14"
langgraph = ">=0.2.27"
langchain-openai = ">=0.2.0"
langchain-anthropic = ">=0.2.0"
langchain-community = ">=0.2.12"
typing-extensions = ">=4.12.2"

# Discovery
duckduckgo-search = ">=6.2.10"
httpx = ">=0.27.0"
trafilatura = ">=1.10.0"
beautifulsoup4 = ">=4.12.3"
lxml = ">=5.2.2"
tenacity = ">=8.3.0"

# Vector memory
chromadb = ">=0.5.5"

# SQL memory
SQLAlchemy = ">=2.0.32"
aiosqlite = ">=0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
ruff = ">=0.6.2"

# -------- Optional metadata / config in pyproject --------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["I"]  # isort
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","F","I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

