[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-client"
version = "0.1.0"
description = "Python client SDK for Agentic AI (FastAPI + SSE)."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0","anyio>=4.0.0"]

[project.scripts]
agentic-ai-client = "agentic_ai_client.__main__:main"

[tool.setuptools.package-dir]
= "."

[tool.setuptools.packages.find]
where = ["."]
